# PORK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
sources/: CMakeLists.txt
sources/demo/: CMakeLists.txt  main.cpp
sources/libpork/: CMakeLists.txt  Input.cpp  Input.hpp  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
sources/libpork/ut/: CMakeLists.txt  InputTests.cpp  LexerTests.cpp  TokenTests.cpp
